2008-05-01; Alexandru Csete <oz9aec@gmail.com>

    * src/gtk-rot-knob.[ch]:
    New files, previously gtk-rot-ctrl.
    
    * src/gtk-freq-knob.[ch]:
    New files, previously gtk-freq-ctrl.


2008-04-30; Alexandru Csete <oz9aec@gmail.com>

    * src/predict-tools.c:
    Fixed bug 1954664: Wrong overpass prediction.
    
    * src/gtk-single-sat.c:
    Fixed bug 1880815: Null pointer dereference causes crash on startup.


2008-04-24; Alexandru Csete <oz9aec@gmail.com>

    * src/rot-ctrl-window.[ch]:
    Added files.
    

2008-04-22; Alexandru Csete <oz9aec@gmail.com>

    * src/gtk-rot-ctrl.[ch]:
    First fully functional implementation.
    

2008-04-20; Alexandru Csete <oz9aec@gmail.com>

    * src/rig-io.[ch]:
    Added generic interface to hardware drivers.


2008-03-30; Alexandru Csete <oz9aec@gmail.com>

    * src/gtk-freq-ctrl.c, gtk-freq-ctrl.h:
    * src/gtk-rot-ctrl.c, gtk-rot-ctrl.h:
    Added files.
    

2008-03-27; Alexandru Csete <oz9aec@gmail.com>

    * src/radio-conf.[ch]:
    Added parameter for enabling built-in radio extensions.
    
    * src/sat-pref-rig.c:
    * src/sat-pref-rig-editor.c:
    * src/sat-pref-rig-data.h:
    Added configuration controls for CAT extensions.
    
    * src/gtk-sat-module-popup.c:
    Added menu items for radio and rotator control.
    

2008-03-17; Alexandru Csete <oz9aec@gmail.com>

    * src/sat-pref-rig.c:
    Fixed bug that caused incorrect display of DTR and RTS line settings in
    the radio list.
    

2008-01-26; Alexandru Csete <oz9aec@gmail.com>

    * src/rotor-conf.[ch]:
    * src/sat-pref-rot.c:
    * src/sat-pref-rot-editor.c
    * src/sat-pref-rot-data.h:
    Added support for Az and El limits.


2008-01-24; Alexandru Csete <oz9aec@gmail.com>

    * src/sat-pref-rig-editor.[ch]:
    Finished first draft of radio configuration editor.
    
    * src/sat-pref-rig.c:
    Finished radio configuration page.
    
    * src/rotor-conf.[ch]:
    * src/sat-pref-rot-editor.[ch]: